overflow issue fix

--- a/index.css
+++ b/index.css
@@ -168,7 +168,7 @@ hr {
     font-weight: 900;
 }
 .contactBox{
-    border: 4.5px solid white;
+    border: 3px solid white;
     width: 50%;
     margin: auto;
     margin-bottom: 20px;
@@ -182,7 +182,6 @@ hr {
     border: none;
     color: white;
     padding: 15px 32px;
-    font-weight: bolder;
     text-align: center;
     text-decoration: none;
     display: inline-block;
